# rreadmission-risk-monitor

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
artifacts/: data_profile.json  latest_eval.json  split_config.json
bundle/0.1.0/: feature_columns.json  metadata.json  reference_stats.json
bundle/latest/: PATH.txt
data/fixtures/: train_sample.parquet
scripts/: ingest.py  serve.py  split.py  train.py
src/readmission_risk_monitor/: config.py
src/readmission_risk_monitor/data/: contract.py  validate.py
src/readmission_risk_monitor/features/: build.py  leakage.py  split.py
src/readmission_risk_monitor/modeling/: bundle.py  evaluate.py  train.py
src/readmission_risk_monitor/serving/: app.py  explain.py  model_loader.py  schemas.py
streamlit/: app_streamlit.py
tests/: test_data_contract.py  test_leakage_guards.py  test_metrics_regression.py
